# energy_explorer_simple_api

./: main.py
api/: main.py  pyproject.toml
api/data/: 10.csv  13.csv  14.csv  9.csv  scenario_1.json  scenario_10.json  scenario_11.json  scenario_14.json  scenario_2.json  scenario_5.json  scenario_7.json  scenario_8.json  scenario_9.json
data/: 11.csv  5.csv  Net-zero-imports_typical_days_gwh_2050.csv  Net-zero_typical_days_gwh_2020.csv  Net-zero_typical_days_gwh_2035.csv  Net-zero_typical_days_gwh_2050.csv  co2--5_ elec_imports_2050.csv  co2-0_ elec_imports_2050.csv  co2-10_ elec_imports_2050.csv  co2-15_ elec_imports_2050.csv  co2-20_ elec_imports_2050.csv  co2-25_ elec_imports_2050.csv  co2-25_no_elec_imports_2050.csv  co2-5_no_elec_imports_2050.csv  scenario_12.json  scenario_13.json  scenario_3.json  scenario_4.json  scenario_6.json
